# support-assistant

./: .gitignore  DEMO_GUIDE.md  DESIGN.md  README.md  TESTING.md  pyproject.toml  run_tests.py  simplified_flow_diagram.md  test_classification_workflow.py  test_comprehensive_demo.py  test_end_to_end_integration.py  test_knowledge.py  test_multi_team_classification.py
knowledge_resources/: block_events_guide.md  booking_issues.md  data_reconciliation.md  feed_framework_troubleshooting.md  markitwire_feed_troubleshooting.md  markitwire_inbound_booking.md  outage_investigation.md
mcp_servers/: classification_server.py  health_server.py  knowledge_server.py
mcp_servers/categories/: atrs.json  core.json
mcp_servers/categories/knowledge_resources/: data_reconciliation.md
support_agent/: __init__.py  assistant.py  cli.py  config.py  models.py
tests/: __init__.py  test_comprehensive_demo.py  test_end_to_end_integration.py  test_error_handling.py  test_functional.py  test_system_overview.py
